--- a/dillo/templates/dillo/base_columns.pug
+++ b/dillo/templates/dillo/base_columns.pug
@@ -3,6 +3,7 @@
 | {% block content %}
 .app-main-content.container(class="base-columns {% block base_classes %}{% endblock base_classes %}")
 	| {% block stream_nav %}{% endblock stream_nav %}
+.app-main-content.container
 	.row
 		| {% block stream_wrapper %}
 		div(class="stream col-lg-{% block stream_width %}9{% endblock %} {% block stream_classes %}{% endblock stream_classes %}")
