Posts Grid: Style loading more posts indicator

--- a/dillo/templates/dillo/posts_grid_embed.pug
+++ b/dillo/templates/dillo/posts_grid_embed.pug
@@ -55,6 +55,6 @@ li.post-container(
 | {% endfor %}
 
 | {% if page_obj.has_next %}
-li.js-loading-posts-indicator
-	p Loading more posts...
+li.js-loading-posts-indicator.posts-loading-more
+	span Loading more posts...
 | {% endif %}
