--- a/dillo/templates/dillo/components/_profile_avatar.pug
+++ b/dillo/templates/dillo/components/_profile_avatar.pug
@@ -1,7 +1,7 @@
 | {% load thumbnail %}
 
 a.profile-avatar-container(
-	class="{{ is_link_disabled }}",
+	class="{{ user.profile.is_looking_for_work|yesno:'is-looking-for-work ,' }}{{ is_link_disabled }}",
 	data-placement="{% if tooltip %}{{ tooltip }}{% endif %}",
 	data-toggle="{% if tooltip %}tooltip{% endif %}",
 	href="{% url 'profile-detail' user.username %}",
