--- a/dillo/templates/dillo/components/_button_follow.pug
+++ b/dillo/templates/dillo/components/_button_follow.pug
@@ -8,7 +8,9 @@ a.btn(
   )
   span
     i(class="{% if not tag %}{% if request.user|is_following:target_object %}i-user-minus{% else %}i-user-plus{% endif %}{% endif %}")
+    | {% if not icon_only %}
     span {% if request.user|is_following:target_object %}Unfollow{% else %}Follow{% endif %}{% if tag %} Hashtag{% endif %}
+    | {% endif %}
 | {% endif %}
 | {% else %}
 a.btn.btn-primary-alt(
@@ -16,5 +18,7 @@ a.btn.btn-primary-alt(
   href="{% follow_url target_object %}")
   span
     i.i-user-plus
+    | {% if not icon_only %}
     span Follow
+    | {% endif %}
 | {% endif %}
