Profile Settings: Rename Change Password to Password in menu
And fix spacing.

--- a/dillo/templates/account/password_change.pug
+++ b/dillo/templates/account/password_change.pug
@@ -5,7 +5,7 @@
 | {% block head_title %}{% trans "Change Password" %}{% endblock %}
 | {% block content_account_edit_form %}
 .card-header
-  h1 {% trans "Change Password" %}
+  h1 {% trans "Password" %}
 .card-body
   form.password_change(method='POST', action="{% url 'account_change_password' %}")
     | {% csrf_token %}
