Profile Detail: Center details when no reel

--- a/dillo/templates/dillo/components/_profile_header.pug
+++ b/dillo/templates/dillo/components/_profile_header.pug
@@ -5,6 +5,7 @@
 | {% load dillo_filters %}
 
 .profile-header(
+  class="{{ user.profile.reel|yesno:'has-reel,' }}"
   style="background-image: url({% static 'images/background_01.png' %})")
   .profile-info-container
     .profile-info
