--- a/dillo/templates/dillo/components/_profile_header.pug
+++ b/dillo/templates/dillo/components/_profile_header.pug
@@ -5,8 +5,7 @@
 | {% load dillo_filters %}
 
 .profile-header(
-  class="{{ user.profile.reel|yesno:'has-reel,' }}"
-  style="background-image: url({% static 'images/background_01.png' %})")
+  class="{{ user.profile.reel|yesno:'has-reel,' }}")
   .profile-info-container
     .profile-info
       //- Avatar.
