Directory: Add pagination support

--- a/dillo/templates/dillo/directory/user_directory.pug
+++ b/dillo/templates/dillo/directory/user_directory.pug
@@ -210,4 +210,14 @@ script.
 
   }
 
+  // Load more profiles (async)
+  $(document).on('click', '.js-load-more', function (event) {
+    let $userListContainer = $('#user-list');
+    let $loadMoreButton = $(this);
+    $.get($(this).data('next_url'), function (data) {
+      $userListContainer.append(data);
+      $loadMoreButton.remove();
+    });
+  });
+
 | {% endblock javascript_extra %}
