Introducing: Organizations map
Currently available under /o, can be renamed and moved under /studios.
Studios can be imported by running ./manage.py create_orgs_from_jobs
Creation happens in /o/create.

--- a/dillo/templates/dillo/profile_edit.pug
+++ b/dillo/templates/dillo/profile_edit.pug
@@ -51,7 +51,7 @@ script.
 
 	let choiceCityElement = document.getElementById('id_city');
 	let choiceCity = new Choices(choiceCityElement, {maxItemCount: 1});
-	choiceCountryElement = document.getElementById('id_country');
+	let choiceCountryElement = document.getElementById('id_country');
 	new Choices(choiceCountryElement);
 	choiceCountryElement.addEventListener(
 		'change',
